--- a/web/index.html
+++ b/web/index.html
@@ -18,6 +18,10 @@
                 <button type="button" class="custom-button" onclick="triggerUpload()">Upload resume (PDF)</button>
             </form>
             <p>None of your data are stored.</p>
+            <div hidden>
+                <div class="lds-roller"><div></div><div></div><div></div><div></div><div></div><div></div><div></div><div></div></div>
+                <p>Analyzing...</p>
+            </div>
         </div>    
     </section>
 
